# uav_sim_ros

./: CMakeLists.txt  README.md  package.xml
codegen/: BackupController.m  ReadDroneBags.m  ReadTwoDronesBags.m  UAVDynamics.m  UAVDynamicsGradient.m  UAVDynamicsWithGrad.m  backupDU.m  backupU.m  generateDynamics.m  matDF.m  matDFcl.m  matDG.m  matf.m  matg.m
codegen/codegen/lib_example/BackupController/: BackupController.cpp  BackupController.h  BackupController_initialize.cpp  BackupController_initialize.h  BackupController_rtw.mk  BackupController_rtwutil.cpp  BackupController_rtwutil.h  BackupController_terminate.cpp  BackupController_terminate.h  BackupController_types.h  backupU.cpp  backupU.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
codegen/codegen/lib_example/BackupController/examples/: main.cpp  main.h
codegen/codegen/lib_example/BackupController/interface/: _coder_BackupController_api.c  _coder_BackupController_api.h  _coder_BackupController_info.c  _coder_BackupController_info.h  _coder_BackupController_mex.cpp  _coder_BackupController_mex.h
codegen/codegen/lib_example/UAVDynamics/: UAVDynamics.cpp  UAVDynamics.h  UAVDynamics_initialize.cpp  UAVDynamics_initialize.h  UAVDynamics_rtw.mk  UAVDynamics_terminate.cpp  UAVDynamics_terminate.h  UAVDynamics_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  rtw_proj.tmw  rtwtypes.h
codegen/codegen/lib_example/UAVDynamics/examples/: main.cpp  main.h
codegen/codegen/lib_example/UAVDynamics/interface/: _coder_UAVDynamics_api.c  _coder_UAVDynamics_api.h  (+4 more)
codegen/codegen/lib_example/UAVDynamicsGradient/: UAVDynamicsGradient.cpp  UAVDynamicsGradient.h  UAVDynamicsGradient_initialize.cpp  UAVDynamicsGradient_initialize.h  UAVDynamicsGradient_rtw.mk  UAVDynamicsGradient_terminate.cpp  UAVDynamicsGradient_terminate.h  UAVDynamicsGradient_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
codegen/codegen/lib_example/UAVDynamicsWithGrad/: UAVDynamicsWithGrad.cpp  UAVDynamicsWithGrad.h  UAVDynamicsWithGrad_initialize.cpp  UAVDynamicsWithGrad_initialize.h  UAVDynamicsWithGrad_rtw.mk  UAVDynamicsWithGrad_terminate.cpp  UAVDynamicsWithGrad_terminate.h  UAVDynamicsWithGrad_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  matDFcl.cpp  matDFcl.h  matf.cpp  matf.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
codegen/dynamics/: full_eul.m  quad1_constants.m  so3_eul.m
gazebo/URDF/: amberuav.urdf  ground_plane.sdf  mine.urdf
gazebo/World/: sim.world
include/: tmwtypes.h
include/uav_sim_ros/: asif_filter.hpp  common.hpp  controller_node.hpp  customTimer.hpp  dynamics_ekf.h  integrator_node.hpp  manual_teleop_node.hpp  safety_filter_node.hpp  sensor_node.hpp  uav_dynamics_alt.hpp
launch/: main.launch  manual_teleop.launch  manual_teleop_two_drones.launch  rviz.launch  rviz_two_drones.launch  sim.launch  two_drones.launch
msg/: sensor.msg
rqt_gui/: uav_exploration.perspective
rviz/: config_safety_filter.rviz  config_two_drones.rviz
rviz/URDF/: amberuav.urdf  cast.urdf
src/: controller_node.cpp  ekf.cpp  ekf_node.cpp  gazebo_interface.cpp  integrator_node.cpp  keyboard.cpp  manual_teleop_node.cpp  safety_filter_node.cpp  sensor_node.cpp
(+16 files in other folders)
